Fix height of create new event button overlapping events

--- a/extensions/google_calendar_workflow/css/style.scss
+++ b/extensions/google_calendar_workflow/css/style.scss
@@ -83,6 +83,7 @@
 
 // Move create event button as it blocks calendar events.
 .zlaSJd {
+    bottom: auto !important;
     right: 1em !important;
     top: 1em;
     z-index: 1000 !important;
